syntax = "proto3";

package user.v1;

service UserDemo {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
}

message GetUserRequest { uint64 id = 1; }

message GetUserResponse { User user = 1; }

message User {
  string name = 1;
  int32 age = 2;
  uint64 id = 3;
  string email = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}